# daypack

./: .gitignore  README.md  pyproject.toml  requirements.txt
daypack_js/: tsconfig.json
daypack_js/src/: daypack.ts
daypack_py/: README.md  pyproject.toml  requirements.txt
daypack_py/src/: .daypack.py.swp  daypack.py  device.py  model.py
daypack_py/tests/: daypack_test.py  device_test.py  model_test.py
ios-webview-coreml-shell/daypack/daypack/: ContentView.swift  config.json
ios-webview-coreml-shell/daypack/daypack.xcodeproj/project.xcworkspace/xcuserdata/bowserj.xcuserdatad/: UserInterfaceState.xcuserstate
src/: daypack.py  device.py
src/templates/android/webview-ml-shell/app/: build.gradle.kts
src/templates/android/webview-ml-shell/app/src/main/assets/gradio_gen/: README
src/templates/android/webview-ml-shell/app/src/main/assets/js/: README
src/templates/android/webview-ml-shell/app/src/main/assets/models/: README
src/templates/android/webview-ml-shell/app/src/main/cpp/: CMakeLists.txt  lite_rt_model.cpp  lite_rt_model.h  native-lib.cpp
src/templates/android/webview-ml-shell/app/src/main/java/ai/baseweight/daypack/: MainActivity.kt  ModelManager.kt  ModelMetadata.kt
src/templates/android/webview-ml-shell/gradle/: libs.versions.toml
templates/android/webview-ml-shell/app/src/main/java/ai/baseweight/daypack/: MainActivity.kt
tests/: device_test.py
webview-ml-shell/app/src/main/: AndroidManifest.xml
webview-ml-shell/app/src/main/cpp/: native-lib.cpp
webview-ml-shell/app/src/main/java/ai/baseweight/daypack/: MainActivity.kt
webview-ml-shell/app/src/main/res/values/: strings.xml
